# haddock-runner

./: .bumpversion.cfg  .codacy.yaml  .gitignore  .goreleaser.yaml  .howfairis.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  HADDOCK.md  HADDOCK3.md  PYTHON2.md  README.md  environment.yml  go.mod  go.sum  haddock-runner  haddock24.sh  haddock3.sh  haddockrunner  main.go  pyproject.toml  run_benchmark.py  setup.py  test_2  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  start.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  ci.yml  deploy.yml  go-releaser.yml  link_checker.yaml  lint.yml  mdbook.yml  release.yml  unittests.yml  version-bump.yml
.trunk/: actions  logs  notifications  trunk.yaml
ISSUE_TEMPLATE/: bug_report.md
benchmarktools/: cli.py  functions.py  version.py
benchmarktools/modules/: configuration.py  dataset.py  errors.py  haddock.py  (+2 more)
constants/: constants.go
dataset/: dataset.go  dataset_test.go
dev-tools/: run-test.sh
docs/: book.toml
example/: benchmark.yml  bm.yml  example_haddock24.yml  example_haddock30.yml  example_input.yml  haddock24.sh  haddock3.sh  input_list.txt  pdb.list  scenarios.toml  shape.yml  slurm.yml
fs/: execute.go  execute_test.go
input/: input.go  input_test.go  module-struct.go
modules/: configuration.py  dataset.py  errors.py  haddock.py
runner/: execute.go  execute_test.go  jobs.go  jobs_test.go
slurm-conf/: README.md  cgroup.conf  slurm.conf
src/: checksum.rs  dataset.rs  input.rs  job.rs  logging.rs  main.rs  queue.rs  scenario.rs  slurm.rs  summary.rs  utils.rs
utils/: utils.go  utils_test.go
(+41 files in other folders)
